Fix header z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,7 @@
   }
 
   .main-padding {
-    @apply px-10 md:px-14 lg:px-20 py-6;
+    @apply px-6 md:px-14 lg:px-20 py-6;
   }
 
   .mealcard-grid {
